# robocup-home-education-los-ultramarinos

./: CMakeLists.txt  Makefile  README.md
behavior_tree_xml/: testEsperar.xml
behavior_trees_xml/: Iniciar.xml  Tree_Main.xml  find_my_mates.xml
include/behavior_tree/: Centrar.h  DataCheck.h  DataDump.h  Detectar.h  Esperar.h  Iniciar.h  MaletaDetector.h  MaletaDetector2.h  Navegar.h  Navegar2.h  Navegar3.h  Observar.h  Seguir.h  TextToSpeech.h  TextToSpeech2.h  testEsperar.h
include/nodo_behavior_tree/: Seguir.h
include/robocup_home_education/: Controlador.h  DialogInterface.h  MonologoDF.h  PIDController.h
launch/: Main.launch  Seguir.launch  dialog.launch  find_mates.launch
src/: Carry_My_Luggage_node.cpp  Control.cpp  Coordinador.cpp  Find_My_Mates.cpp  Main.cpp  Monologo_node.cpp  MoveDetector.cpp  ObservadorPersonas.cpp  Root.cpp  Speaker.cpp  data_collector.cpp  esperar.cpp  identificadorLado.cpp
src/behavior_tree_nodes/: Centrar.cpp  DataCheck.cpp  DataDump.cpp  Detectar.cpp  Esperar.cpp  Iniciar.cpp  MaletaDetector.cpp  MaletaDetector2.cpp  Navegar.cpp  Navegar2.cpp  Navegar3.cpp  Observar.cpp  Seguir.cpp  TextToSpeech.cpp  TextToSpeech2.cpp  testEsperar.cpp
src/nodo_behavior_tree/: Seguir.cpp  Seguir2.cpp
src/robocup_home_education/: Control.cpp  Controlador.cpp  Coordinador.cpp  DialogInterface.cpp  Graficos.cpp  MoveDetector.cpp  ObservadorPelotasHSV.cpp  ObservadorPersonas.cpp  PIDController.cpp  TextToSpeech.cpp  data_collector.cpp  identificadorLado.cpp
